# ROS_Flutter_Gui_App

./: .gitignore  CMakeLists.txt  LICENSE  README.md  README_EN.md  build.sh  build_cn.sh  l10n.yaml  pubspec.yaml
.github/workflows/: android_build.yaml  app_build.yaml  linux_build.yaml  realease.yaml  ros_humble_build.yaml  web_build.yaml  windows_build.yaml
android/: build.gradle  gradle.properties  settings.gradle
android/app/: build.gradle
android/gradle/wrapper/: gradle-wrapper.properties
app/: README.md  README_EN.md  pubspec.yaml
app/.github/workflows/: android_build.yaml  realease.yaml
app/android/app/: build.gradle
app/docs/: usage.md
app/ios/Runner/: Info.plist
app/lib/: main.dart
app/lib/basic/: RobotPose.dart  diagnostic_array.dart  gui_layer_type.dart  key_value.dart  laser_scan.dart  layer_config.dart  ssh_quick_cmd.dart  tf.dart  tf2_dart.dart  transform.dart  user_layer_spec.dart
app/lib/display/: costmap.dart  grid.dart  laser.dart  path.dart  pointcloud.dart  polygon.dart  robot.dart  tile_map.dart  topology_line.dart
app/lib/global/: setting.dart
app/lib/page/: camera_view.dart  connect_page.dart  diagnostic_page.dart  gamepad_widget.dart  layer_settings_panel.dart  main_page.dart  (+6 more)
app/linux/: my_application.cc
app/web/: index.html
app/windows/: CMakeLists.txt
backend/: CMakeLists.txt  README.md  README_EN.md  build.sh  build_cn.sh  cpack.sh
backend/cmake/: FindSDL2_image.cmake  GetDrogon.cmake  GetFmt.cmake  GetProtobuf.cmake  GetYamlCpp.cmake
backend/cmake/cpack/: postinst.in  prerm.in
backend/src/app/: CMakeLists.txt  app_config.hpp  application.cpp  application.hpp
backend/src/app/service/: ros_gui_backend.system.service.in
backend/src/common/: CMakeLists.txt
backend/src/common/config/: config.cpp  config.hpp
backend/src/common/logger/: easylogging++.cc  logger.cc
backend/src/core/: CMakeLists.txt
backend/src/core/map/: map_io.cpp  map_manager.hpp  map_mode.cpp  map_mode.hpp  occupancy_grid.hpp  tiles_map_generator.cc  topology_map.hpp
backend/src/core/robot_stream/: CMakeLists.txt  robot_message_hub.cpp  robot_message_hub.hpp  robot_ws_controller.cpp  robot_ws_controller.hpp  ssh_tunnel_ws_controller.cpp  ssh_tunnel_ws_controller.hpp
backend/src/core/web_server/: CMakeLists.txt  web_server.cpp  web_server.hpp
backend/src/node/: interface.hpp  node_config.hpp  node_manager.cpp  node_manager.hpp
backend/src/node/ros1/: CMakeLists.txt  convert.hpp  node.cpp  node.hpp
backend/src/node/ros2/: CMakeLists.txt  node.cpp  node.hpp  node_streamer.cpp
backend/src/proto/: CMakeLists.txt
cmake/: GetDrogon.cmake  GetFmt.cmake
cmake_modules/: GetHttplib.cmake  GetTopologyMsg.cmake
docs/: configuration.md  configuration_EN.md  installation.md  installation_EN.md  polygon_drawing_guide.md  usage.md  usage_EN.md
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/basic/: RobotPose.dart  action_status.dart  diagnostic_status.dart  gamepad_widget.dart  laser_scan.dart  math.dart  matrix_gesture_detector.dart  nav_point.dart  occupancy_map.dart  pointcloud2.dart  polygon_stamped.dart  robot_path.dart  tf.dart  tf2_dart.dart  tile_map_meta.dart  topology_map.dart
lib/channel/: ros_channel.dart
lib/display/: costmap.dart  diagnostic.dart  display_costmap.dart  display_global_costmap.dart  display_grid.dart  display_laser.dart  display_map.dart  display_nav_point.dart  display_path.dart  display_pointcloud.dart  display_polygon.dart  display_pose_direction.dart  display_robot.dart  display_robot_reloc.dart  display_topology_line.dart  display_waypoint.dart  grid.dart  laser.dart  map.dart  path.dart  pointcloud.dart  polygon.dart  pose.dart  pose_marker.dart  robot.dart  robot_marker.dart  stream_image.dart  tile_map.dart  tile_map_widget.dart  topology_line.dart  waypoint.dart
lib/global/: setting.dart
lib/hardware/: gamepad.dart
lib/l10n/: app_en.arb  app_zh.arb
lib/page/: MapPage.dart  MapPage_v0.dart  MapPage_v1.dart  MapPage_v2.dart  MapPage_v3.dart  RobotConnectPage.dart  SettingPage.dart  connect_page.dart  diagnostic_page.dart  gamepad_mapping_page.dart  gamepad_widget.dart  main_flame.dart  main_map_widget.dart  main_page.dart  map_edit_command.dart  map_edit_flame.dart  map_edit_page.dart  map_page.dart  robot_connect_page.dart  setting_page.dart
lib/provider/: diagnostic_manager.dart  global_state.dart  http_channel.dart  map_manager.dart  nav_point_manager.dart  ros_bridge_player.dart  ros_channel.dart  them_provider.dart
linux/: CMakeLists.txt
linux/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
macos/Flutter/: GeneratedPluginRegistrant.swift
macos/Runner.xcodeproj/: project.pbxproj
protocol/: action_msgs.proto  diagnostic_msgs.proto  geometry_msgs.proto  nav_msgs.proto  robot_message.proto  sensor_msg.proto  topology_msgs.proto
src/app/: CMakeLists.txt  app_config.hpp  application.cpp  application.hpp  main.cpp  map_manager.cpp  map_manager.hpp
src/common/: CMakeLists.txt  macros.h
src/core/: CMakeLists.txt  map_io.cpp  map_io.hpp  map_mode.cpp  map_mode.hpp  map_server_core.cpp  map_server_core.hpp  occupancy_grid.hpp  tiles_map_generator.cc  tiles_map_generator.h  topology_map.hpp
src/core/map/: CMakeLists.txt  map_io.hpp  map_manager.cpp  tiles_map_generator.h
src/core/web_server/: CMakeLists.txt  web_server.cpp  web_server.hpp
src/node/: CMakeLists.txt  gui_backend_config.hpp  interface.hpp  map_server_interface.hpp
src/node/ros1/: CMakeLists.txt  convert.hpp  map_server_node.cpp  map_server_node.hpp  node.cpp  node.hpp
src/node/ros2/: CMakeLists.txt  convert.hpp  map_server_node.cpp  map_server_node.hpp  node.cpp  node.hpp
test/: widget_test.dart
tiles_map_test/: README.md  pubspec.yaml
tiles_map_test/lib/: main.dart
tiles_map_test/linux/: CMakeLists.txt
tiles_map_test/test/: widget_test.dart
tiles_map_test/web/: index.html  manifest.json
tiles_map_test/windows/: CMakeLists.txt
web/: manifest.json
windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
windows/runner/: Runner.rc
(+79 files in other folders)
